libs/pavex_cli/tests/ui_tests/runtime_singletons_must_be_sync/expectations/stderr.txt
Error: 
  × `app::NonSyncSingleton` does not implement the `core::marker::Sync` trait.
    ╭─[src/lib.rs:19:1]
 19 │     let mut bp = AppBlueprint::new();
 20 │     bp.constructor(f!(crate::NonSyncSingleton::new), Lifecycle::Singleton);
    ·                    ────────────────┬───────────────
    ·                                    ╰── The constructor was registered here
 21 │     bp
    ╰────
  help: All singletons must implement the `Send`, `Sync` and `Clone` traits.
         `pavex` runs on a multi-threaded HTTP server and singletons must be
        shared across all worker threads.